--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=taskmanager
-spring.datasource.url=jdbc:mysql://localhost:3306/taskmanager
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:24458/taskmanager
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=mfOMKFuXcCYLFXihVoYDrirYxmzGSBEt
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.security.oauth2.client.registration.google.client-id=997519941277-miib38vkgtt0gc5unu8ejdaao1u14sn3.apps.googleusercontent.com
