--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=mfOMKFuXcCYLFXihVoYDrirYxmzGSBEt
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.security.oauth2.client.registration.google.client-id=997519941277-miib38vkgtt0gc5unu8ejdaao1u14sn3.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret=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
 server.port=1010
