--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=taskmanager
-spring.datasource.url=jdbc:mysql://startaskz-db.onrender.com:3306/taskmanager
-spring.datasource.username=admin
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:24458/taskmanager
+spring.datasource.username=root
+spring.datasource.password=mfOMKFuXcCYLFXihVoYDrirYxmzGSBEt
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
