--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,17 @@
 			<artifactId>spring-security-oauth2</artifactId>
 			<version>2.5.2.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.7</version>
+		</dependency>
+		<!-- Logback Classic (SLF4J Implementation) -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.4.8</version>
+		</dependency>
 <!--        <dependency>-->
 <!--            <groupId>com.michael</groupId>-->
 <!--            <artifactId>taskmanagementsystem</artifactId>-->
