--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=taskmanager
-spring.datasource.url=jdbc:postgresql://dpg-cq5v2708fa8c738es5b0-a.oregon-postgres.render.com/taskmanager_kupz
+spring.datasource.url=jdbc:postgresql://dpg-cq5v2708fa8c738es5b0-a/taskmanager_kupz
 spring.datasource.username=admin
 spring.datasource.password=SluXCrUnm71ae7Bn1Y7IfzzFjOM4a1ro
 spring.jpa.hibernate.ddl-auto=update
@@ -7,5 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.security.oauth2.client.registration.google.client-id=997519941277-miib38vkgtt0gc5unu8ejdaao1u14sn3.apps.googleusercontent.com
 #spring.security.oauth2.client.registration.google.client-secret=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
-server.port=${PORT:5432}
 #postgresql://admin:SluXCrUnm71ae7Bn1Y7IfzzFjOM4a1ro@dpg-cq5v2708fa8c738es5b0-a.oregon-postgres.render.com/taskmanager_kupz
+logging.level.root=warn
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
