--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 #postgresql://admin:SluXCrUnm71ae7Bn1Y7IfzzFjOM4a1ro@dpg-cq5v2708fa8c738es5b0-a.oregon-postgres.render.com/taskmanager_kupz
 logging.level.root=warn
 logging.level.org.springframework.web=debug
+logging.level.com.michael.taskmanagementsystem=DEBUG
 logging.level.org.hibernate=error
